<resources>
    <string name="app_name">ImagesDemo</string>
    <string name="share_data">Share Img, Pdf</string>
    <string name="done">Done</string>
    <string name="select_images">Select Images</string>
    <string name="take_from_camera">Take From Camera</string>
    <string name="take_from_gallery">Take From Gallery</string>
    <string name="custom_gallery">Custom Gallery</string>
    <string name="take_multiple_images_from_gallery">Take Multiple Images From Gallery</string>
    <string name="make_pdf">Make Pdf</string>
    <string name="download_any_image">Download Any Image</string>
</resources>
