<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.innovative.imagesdemo.MainActivity">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/take_from_camera"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_camera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/take_from_gallery"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_multiple_pick_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_gallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/take_multiple_images_from_gallery"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_custom_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_multiple_pick_gallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/custom_gallery"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_custom_gallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/share_data"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_make_pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_share"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/make_pdf"
        android:textAllCaps="false" />

</RelativeLayout>
